# SocketDebuger

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Checks.cmake  README.md
Common/: CMakeLists.txt
Common/Headers/: Config.h.cmakein  ISocket.h  Socket.h  Types.h
Common/Sources/: ISocket.cpp  Socket.cpp  Types.cpp
